refactor: extract use cases and mappers from SubjectSelectionController