@@ -1,11 +1,12 @@
 package co.unicauca.edu.unisched.interfaces.api;
 
-import co.unicauca.edu.unisched.domain.model.Subject;
-import co.unicauca.edu.unisched.domain.model.SubjectGroup;
-import co.unicauca.edu.unisched.domain.ports.IScheduleGenerationService;
-import co.unicauca.edu.unisched.domain.ports.ISubjectGroupRepository;
-import co.unicauca.edu.unisched.domain.ports.ISubjectRepository;
-import co.unicauca.edu.unisched.domain.ports.ISubjectValidationService;
+import co.unicauca.edu.unisched.application.GenerateAcademicSchedulesUseCase;
+import co.unicauca.edu.unisched.application.ValidateSubjectSelectionUseCase;
+import co.unicauca.edu.unisched.application.ValidateWithExclusionsUseCase;
+import co.unicauca.edu.unisched.domain.model.SubjectCombinationOutcome;
+import co.unicauca.edu.unisched.interfaces.api.mapper.CustomSubjectMapper;
+import co.unicauca.edu.unisched.interfaces.api.mapper.SubjectSelectionRequestMapper;
+import co.unicauca.edu.unisched.interfaces.api.mapper.ValidationResponseMapper;
 import co.unicauca.edu.unisched.interfaces.dto.SubjectSelectionRequest;
 import co.unicauca.edu.unisched.interfaces.dto.ValidationResponseDto;
 import org.junit.jupiter.api.Assertions;
@@ -13,29 +14,33 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.ResponseEntity;
 
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 public class SubjectSelectionControllerTest {
 
     @Mock
-    private ISubjectValidationService validationService;
+    private ValidateSubjectSelectionUseCase validateUseCase;
     @Mock
-    private ISubjectRepository subjectRepository;
+    private ValidateWithExclusionsUseCase validateWithExclusionsUseCase;
     @Mock
-    private ISubjectGroupRepository groupRepository;
+    private GenerateAcademicSchedulesUseCase generateSchedulesUseCase;
     @Mock
-    private IScheduleGenerationService generateScheduleService;
+    private SubjectSelectionRequestMapper requestMapper;
+    @Mock
+    private ValidationResponseMapper responseMapper;
+    @Mock
+    private CustomSubjectMapper customSubjectMapper;
 
     @InjectMocks
     private SubjectSelectionController controller;
@@ -43,56 +48,49 @@ public class SubjectSelectionControllerTest {
     @Test
     public void testValidateExclusions_Success() {
         // Arrange
-        Long subjectId = 1L;
-        Subject subject = new Subject(subjectId, "Math", (byte) 1);
-        SubjectGroup group1 = new SubjectGroup(101L, subject, "A", "Prof 1", new ArrayList<>());
-        SubjectGroup group2 = new SubjectGroup(102L, subject, "B", "Prof 2", new ArrayList<>());
+        Set<Long> subjectIds = Set.of(1L);
+        Set<Long> excludedGroupIds = Set.of(101L);
+        SubjectSelectionRequest request = new SubjectSelectionRequest(subjectIds, null, List.of(101L));
 
-        when(subjectRepository.findByIds(Set.of(subjectId))).thenReturn(Set.of(subject));
-        when(validationService.validateCombinationWithErrors(any())).thenReturn(Collections.emptyList());
-        when(groupRepository.findBySubjectIds(Set.of(subjectId))).thenReturn(List.of(group1, group2));
+        when(requestMapper.extractSubjectIds(request)).thenReturn(subjectIds);
+        when(requestMapper.extractExcludedGroupIds(request)).thenReturn(excludedGroupIds);
+        when(customSubjectMapper.mapToDomain(any(), anyLong())).thenReturn(Collections.emptyList());
 
-        SubjectSelectionRequest request = new SubjectSelectionRequest(
-                Set.of(subjectId),
-                null,
-                List.of(101L) // Exclude group 1
-        );
+        SubjectCombinationOutcome outcome = SubjectCombinationOutcome.valid(Collections.emptyMap());
+        when(validateWithExclusionsUseCase.validate(subjectIds, Collections.emptyList(), excludedGroupIds))
+                .thenReturn(outcome);
+
+        ValidationResponseDto expectedResponse = ValidationResponseDto.valid(Collections.emptyMap());
+        when(responseMapper.toDto(outcome)).thenReturn(expectedResponse);
 
         // Act
         ResponseEntity<ValidationResponseDto> response = controller.validateExclusions(request);
 
         // Assert
         Assertions.assertNotNull(response);
-        Assertions.assertTrue(response.getBody().isValid());
-        Assertions.assertTrue(response.getBody().groupsBySubject().containsKey(subjectId));
-        Assertions.assertEquals(1, response.getBody().groupsBySubject().get(subjectId).size());
-        Assertions.assertEquals("B", response.getBody().groupsBySubject().get(subjectId).get(0).groupCode());
+        Assertions.assertEquals(expectedResponse, response.getBody());
     }
 
     @Test
-    public void testValidateExclusions_AllGroupsExcluded() {
+    public void testValidateExclusions_Failure() {
         // Arrange
-        Long subjectId = 1L;
-        Subject subject = new Subject(subjectId, "Math", (byte) 1);
-        SubjectGroup group1 = new SubjectGroup(101L, subject, "A", "Prof 1", new ArrayList<>());
+        Set<Long> subjectIds = Set.of(1L);
+        SubjectSelectionRequest request = new SubjectSelectionRequest(subjectIds, null, Collections.emptyList());
 
-        when(subjectRepository.findByIds(Set.of(subjectId))).thenReturn(Set.of(subject));
-        when(validationService.validateCombinationWithErrors(any())).thenReturn(Collections.emptyList());
-        when(groupRepository.findBySubjectIds(Set.of(subjectId))).thenReturn(List.of(group1));
+        when(requestMapper.extractSubjectIds(request)).thenReturn(subjectIds);
+        when(customSubjectMapper.mapToDomain(any(), anyLong())).thenReturn(Collections.emptyList());
 
-        SubjectSelectionRequest request = new SubjectSelectionRequest(
-                Set.of(subjectId),
-                null,
-                List.of(101L) // Exclude the only group
-        );
+        SubjectCombinationOutcome outcome = SubjectCombinationOutcome.invalid(List.of("Error"));
+        when(validateWithExclusionsUseCase.validate(eq(subjectIds), any(), any())).thenReturn(outcome);
+
+        ValidationResponseDto expectedResponse = ValidationResponseDto.invalid(List.of("Error"));
+        when(responseMapper.toDto(outcome)).thenReturn(expectedResponse);
 
         // Act
         ResponseEntity<ValidationResponseDto> response = controller.validateExclusions(request);
 
         // Assert
         Assertions.assertNotNull(response);
-        Assertions.assertFalse(response.getBody().isValid());
-        Assertions.assertFalse(response.getBody().errors().isEmpty());
-        Assertions.assertTrue(response.getBody().errors().get(0).contains("no tiene grupos disponibles"));
+        Assertions.assertEquals(expectedResponse, response.getBody());
     }
 }
